[project]
name = "hence"
version = "0.10.0"
authors = [{ name = "Mahmudul Hasan", email = "hasanlock@gmail.com" }]
description = "Hence, a powerful framework designed to streamline data pipeline, scraping, automation workflow orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "annotated-types==0.7.0; python_version >= '3.8'",
  "immutabledict==4.2.0; python_version >= '3.8' and python_version < '4.0'",
  "paradag==1.2.0",
  "pydantic==2.8.2; python_version >= '3.8'",
  "pydantic-core==2.20.1; python_version >= '3.8'",
  "typing-extensions==4.12.2; python_version < '3.13'",
]
[project.urls]
Homepage = "https://github.com/0hsn/hence"
Issues = "https://github.com/0hsn/hence/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
